# hydroponics

./: CMakeLists.txt  CMakeListsORIGINAL.txt  README.md  co2sensor.c  co2sensor.h  co2sensorORIGINAL.txt  low_power_pico.c  low_power_pico.h  main.c  plant_config.c  plant_config.h  spectrometer.c  spectrometer.h  spectrometerORIGINAL.txt
include/: lwipopts.h  sys_arch.h
